[project]
name = "enigmaescape"
version = "0.1.0"
description = "Streamlit-based linguistic puzzle game with AI-driven responses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit~=1.40.1",
    "firebase-admin~=6.2.0",
    "google-cloud-firestore>=2.16.0,<3",
    "requests~=2.31.0",
    "flask>=3.0,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "Enigma.py",
    "levels.py",
    "nemo.py",
    "api.py",
    "prompts_data.py",
    "api",
]

[tool.uv]
dev-dependencies = []
